2006-03-08  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditFamily.py: Use tuple relations.
	* src/GramspDb/_GrampsBSDDB.py: Minor fixes.

2006-03-08  Don Allingham  <don@gramps-project.org>
	* src/GramspDb/_GrampsBSDDB.py: make txn support optional via UseTXN

2006-03-07  Don Allingham  <don@gramps-project.org>
	* src/AddMedia.py: remove WindowsUtils dependency
	* src/WindowUtils.py: remove

2006-03-07  Alex Roitman  <shura@gramps-project.org>
	* src/DateHadnler: Move all date parsers/displayers into new
	directory.

2006-03-07  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_FamilyView.py: connect up to signals correctly
	* src/Editors/_EditFamily.py: connect family members to a new family
	correctly.

2006-03-06  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_FamilyView.py: put the person in the correct spot
	when adding a new family
	* src/DataViews/_PersonView.py: remove DataFilter
	* src/GrampsDb/_GrampsDbBase.py: handle the default argument of
	no_magic
	* src/Editors/_EditFamily.py: handle the fact that family
	information is not a simple list.

2006-03-05  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditEventRef.py: add vs. commit handling 
	* src/Editors/_EditPerson.py: handle None as person
	* src/TipOfDay.py: Fix the image location
	* src/Editors/_EditPerson.py: fix focus_out_event
	* src/ViewManager.py: replace the data
	* src/DataViews/_RepositoryView.py: column editing
	* src/DataViews/_MediaView.py: column editing
	* src/DataViews/_SourceView.py: column editing
	* src/DataViews/_PedigreeView.py: column editing
	* src/DataViews/_PersonView.py: column editing
	* src/DataViews/_PlaceView.py: column editing
	* src/ViewManager: column editing
	* src/PeopleModel.py: fix color
	* src/images/stock_lock-open.png: added, so not to require 
	hicolor theme
	* src/images/stock_lock.png: added, so not to require 
	hicolor theme
	* src/images/Makefile.am: add new files
	* src/GrampsWidgets.py: use new image files